--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,7 +13,7 @@ sidebar:
 
   # Actualiza tus datos de contacto
   email: jorgeramirezgarciaa@gmail.com
-  phone: 9512187478
+  phone: 951-218-74-78
   website: # No agregar http://
   linkedin: ramirez-jorge
   github: JorgeGarciaRa
