--- a/_data/data.yml
+++ b/_data/data.yml
@@ -45,7 +45,7 @@ sidebar:
 career-profile:
   title: About Me # NO MODIFICAR
   summary: |
-    Lorem ipsum dolor sit amet, con sectetur adipiscing elit. Proin purus ligula, posuere semper est sed, pretium elementum massa. Duis et orci sed nunc. Maecenas at egestas mi. Nulla id augue a lectus condimentum scelerisque vitae sed dui.
+    I am a proactive, responsible person, I like to learn new things about programming and improve my work through skills that contribute to my profile as a computer engineer, willing to share knowledge and learn at all times. I am fascinated by areas such as data science, IoT, artificial intelligence, and application development.
 
 # Registra aquí tus estudios. Agrega o elimina según sea necesario
 educationcomplete:
