--- a/_data/data.yml
+++ b/_data/data.yml
@@ -40,6 +40,15 @@ sidebar:
 
     - item: Time Management
       link: # dejar en blanco
+      
+    - item: Communication
+      link: # dejar en blanco
+      
+      - item: Critical Thinking
+      link: # dejar en blanco
+      
+      - item: Creativity
+      link: # dejar en blanco
 
 # Registra aquí un resumen de tu perfil
 career-profile:
